migracion-mostrar Index

--- a/VelaAngel-ExamenProgreso/appsettings.json
+++ b/VelaAngel-ExamenProgreso/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VelaAngel_ExamenProgresoContext": "Server=(localdb)\\mssqllocaldb;Database=VelaAngel_ExamenProgresoContext-f6cd0af2-fbe1-4435-8beb-2561c1b846ff;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VelaAngel_ExamenProgresoContext": "Server=(localdb)\\mssqllocaldb;Database=VelaAngel_ExamenProgresoContext-f6cd0af2-fbe1-4435-8beb-2561c1b846ff;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   }
 }
